diesel_compile_tests/tests/fail/as_changeset_bad_column_name.stderr
error[E0412]: cannot find type `name` in module `users`
  --> $DIR/as_changeset_bad_column_name.rs:13:5
   |
13 |     name: String,
   |     ^^^^ not found in `users`

error[E0412]: cannot find type `hair_color` in module `users`
  --> $DIR/as_changeset_bad_column_name.rs:14:28
   |
14 |     #[diesel(column_name = hair_color)]
   |                            ^^^^^^^^^^ not found in `users`

error[E0425]: cannot find value `name` in module `users`
  --> $DIR/as_changeset_bad_column_name.rs:13:5
   |
13 |     name: String,
   |     ^^^^ not found in `users`

error[E0425]: cannot find value `hair_color` in module `users`
  --> $DIR/as_changeset_bad_column_name.rs:14:28
   |
14 |     #[diesel(column_name = hair_color)]
   |                            ^^^^^^^^^^ not found in `users`

error[E0412]: cannot find type `name` in module `users`
  --> $DIR/as_changeset_bad_column_name.rs:20:41
   |
20 | struct UserTuple(#[diesel(column_name = name)] String);
   |                                         ^^^^ not found in `users`

error[E0425]: cannot find value `name` in module `users`
  --> $DIR/as_changeset_bad_column_name.rs:20:41
   |
20 | struct UserTuple(#[diesel(column_name = name)] String);
   |                                         ^^^^ not found in `users`
